--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-MONGO_URI = mongodb://localhost:27017/
+MONGO_URI = mongodb+srv://sanjayks8046:Iahdd45uAymNkIEM@zendb.kv2hnw1.mongodb.net/StudentApp?retryWrites=true&w=majority
 JWT_SECRET=sanjayks
