--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-MONGO_URI = mongodb://localhost:27017/
+MONGO_URI = mongodb+srv://sanjayks8046:Iahdd45uAymNkIEM@zendb.kv2hnw1.mongodb.net/BlogApp?retryWrites=true&w=majority
